@@ -26,6 +26,7 @@ Deprecated
 * ``sphinx.util.inspect.Signature.format_annotation_old()``
 * ``sphinx.util.inspect.Signature.has_retval``
 * ``sphinx.util.inspect.Signature.partialmethod_with_noargs``
+* ``sphinx.util.inspect.Signature.signature``
 * ``sphinx.util.inspect.Signature.skip_first_argument``
 * ``sphinx.util.inspect.Signature.subject``
 
